tests/NormalTests/paczka2/big_fuzzy/60410095.err
Error in line 5: MOgVqLtBW S955 48,0
Error in line 8: MOgVqLtBW A213 78,0
Error in line 20: MOgVqLtBW S702 24,77
Error in line 19: uCJX0Q25phz S955 878,9
Error in line 35: MOgVqLtBW S955 37,2
Error in line 49: 8BWG S702 88,9
Error in line 52: y4tCmz S955 69,1
Error in line 64: MOgVqLtBW S955 44,2
Error in line 68: y4tCmz A213 149,9
Error in line 62: S955 S82 38,8
Error in line 75: S955 A213 31,3
Error in line 83: y4tCmz S82 80,8
Error in line 93: MOgVqLtBW S82 12,0
Error in line 98: 8BWG S955 9,8
Error in line 120: Q97h A213 0,0
Error in line 117: MOgVqLtBW A213 99,8
Error in line 134: z0di S702 53,3
Error in line 128: MOgVqLtBW S702 74,2
Error in line 136: MOgVqLtBW S955 1,8
Error in line 124: uCJX0Q25phz A213 15,4
Error in line 140: uCJX0Q25phz S82 70,9
Error in line 135: z0di S955 30,4
Error in line 141: uCJX0Q25phz A213 26,8
Error in line 139: MOgVqLtBW S702 49,6
Error in line 138: S955 S955 99,1
Error in line 159: MOgVqLtBW S955 7,6
Error in line 165: uCJX0Q25phz S82 96,1
Error in line 170: MOgVqLtBW S702 97,6
Error in line 181: uCJX0Q25phz S702 8,0
Error in line 176: y4tCmz S82 43,2
Error in line 184: y4tCmz S702 49,5
Error in line 166: z0di S955 46,2
Error in line 191: 8BWG A213 56,84
Error in line 187: z0di A213 53,5
Error in line 156: Q97h S702 144,0
Error in line 208: 8BWG A213 173,5
Error in line 227: 8BWG S702 15,6
Error in line 234: Q97h S702 7,6
Error in line 237: Q97h S955 74,1
Error in line 235: S955 S82 84,2
